[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "homlib"
version = "0.1.1-rc5"
description = "State-of-the-art homography estimators."
readme = "README.md"
authors = [
  { name = "Marcus Valtonen Ornhag", email = "marcus.valtonen.ornhag@ericsson.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.scikit-build]
wheel.packages = ["python/src/homlib"]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.scikit-build.cmake.define]
BUILD_EXAMPLES = "OFF"
BUILD_TESTS = "OFF"
